Fixing Issue with Input/Output header collapse

--- a/vipr-portal/portal/public/stylesheets/workflowbuilder.less
+++ b/vipr-portal/portal/public/stylesheets/workflowbuilder.less
@@ -246,13 +246,13 @@ table, th , td {
   transition: margin 0.8s ease;
 }
 
-.collapsed {
+.collapsedLib {
   /* hide it for small displays*/
   display: none;
 }
 
 @media (min-width: 992px) {
-  .collapsed {
+  .collapsedLib {
     display: block;
     /* same width as sidebar */
     margin-left: -33.334%;
